# dankdryer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  blockdiagram.dot  dryer-network-sample.h  sdkconfig
.github/workflows/: pcb_image.yml  ubuntu_test.yml
components/: powersocket.avif
esp32-c6/: CMakeLists.txt  sdkconfig
esp32-c6/main/: CMakeLists.txt  dankdryer.c  dankdryer.h  efuse.c  efuse.h  emc2302.h  emc230x.c  emc230x.h  fans.c  fans.h  heater.c  heater.h  hx711.c  hx711.h  idf_component.yml  lcd.c  nau7802.h  networking.c  networking.h  ota.c  ota.h  pins.c  pins.h  reset.c  reset.h  version.h
esp32-s3/: CMakeLists.txt  sdkconfig
esp32-s3/dankdryer/: dankdryer.ino
esp32-s3/main/: CMakeLists.txt  ble.c  ble.h  bme680.c  bme680.h  dankdryer.c  emc2302.h  emc230x.c  emc230x.h  hx711.c  hx711.h  idf_component.yml  nau7802.c  nau7802.h  networking.c  networking.h  ota.c  pins.h
kicad/: LM35.kicad_sch  dankdryer.kicad_dru  dankdryer.kicad_pcb  dankdryer.kicad_pro  dankdryer.kicad_sch  fabrication-toolkit-options.json  heatercircuit.kicad_sch  microboard.kicad_sch  offcard.kicad_sch
kicad/microboard/: microboard.kicad_pcb  microboard.kicad_pro  microboard.kicad_sch
scad/: Bearing_Ball_6200_2RS.STL  acadapter.scad  antenna_WiFi_RP-SMA_conn.stl  boardlifter.scad  complete.scad  core.scad  coupling.scad  croom.scad  dehydrator.scad  holder.scad  hotbox.scad  iec.stl  interlayer.scad  lcd.scad  lowercoupling.scad  m4nyloc.stl  m5nyloc.stl  motormount.scad  platform.scad  shaft.scad  shield.scad  top.scad  tween.scad  tween_example6.scad  tween_shapes.scad  worm.scad
scad/tweening/: tween_loft.scad
tools/: bledryergatt
webpage/: assembly.html  index.html  style.css  top.stl
